build(deps): update package-lock.json and package.json

--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,6 @@
 {
   "name": "vitalmo",
+  "homepage": "https://www.clevvar.com/",
   "private": true,
   "version": "0.0.0",
   "scripts": {
@@ -8,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "gh-pages": "^3.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   },
