--- a/client/package.json
+++ b/client/package.json
@@ -1,12 +1,14 @@
 {
   "name": "vitalmo",
-  "homepage": "https://www.clevvar.com/",
+  "homepage": "https://mdarifuzzaman11.github.io/VitalMo-Web3.0/",
   "private": true,
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy":"gh-pages -d build"
   },
   "dependencies": {
     "gh-pages": "^3.2.3",
