build: update package.json

--- a/client/package.json
+++ b/client/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vitalmo",
-  "homepage": "https://mdarifuzzaman11.github.io/VitalMo-Web3.0/",
+  "homepage": "https://mdarifuzzaman11.github.io/VitalMo-Web3.0/client/",
   "private": true,
   "version": "0.0.0",
   "scripts": {
