ci: update main.yml

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,6 +1,6 @@
 IconIcon
 ---
-name: Build and Deploy Portfolio Web App to GitHub Pages
+name: Build and Deploy VitalMo Web 3.0 to GitHub Pages
 on:
   push:
     branches: [ master ]
